--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "es6-promise": "^3.3.1",
     "immutable": "^3.8.1",
